@@ -20,6 +20,10 @@ body {
   background-color: #fefefe;
   color: #3f3f3f;
   font: 18px/28px 'PT Serif', Georgia, serif;
+
+  /* prevent font scaling in landscape for iPhone */
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -66,7 +70,6 @@ header.header .title {
   font-family: 'Times New Roman', Georgia, serif;
   font-size: 1.8em;
   line-height: 2em;
-  display: block;
 }
 
 header.header a {
@@ -160,10 +163,10 @@ footer.footer p {
 
 #content table {
   margin: 0.5em auto;
-  min-width: 500px;
   font-size: 0.9em;
   line-height: 1.6em;
   border-collapse: collapse;
+  overflow: scroll;
 }
 
 #content table td,
@@ -208,6 +211,7 @@ footer.footer p {
   font-size: 17px;
   line-height: 1.2em;
   font-family: 'Ubuntu Mono', 'PT Mono', 'Droid Sans Mono', monospace;
+  overflow: scroll;
 }
 
 #content code {
@@ -220,7 +224,12 @@ footer.footer p {
     index pages
    -------------------------------------------------------------------- */
 
-#content .index h2 {
+#content .index .year {
+  display: block;
+  font-size: 1.35em;
+  color: #2f5a8b;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
   margin-left: 150px;
 }
 
@@ -228,6 +237,11 @@ footer.footer p {
   width: 150px;
   float: left;
   text-align: center;
+}
+
+#content .index-entry a {
+  margin-left: 150px;
+  display: block;
 }
 
 
@@ -243,6 +257,7 @@ footer.footer p {
   top: 0;
   right: 0;
   overflow: hidden;
+  z-index: -1;
 }
 .ribbon {
   color: #2f5a8b;
@@ -278,7 +293,15 @@ footer.footer p {
     hacks for responsive design
    -------------------------------------------------------------------- */
 
-@media screen and (max-width: 800px) {
+@media only screen and (max-width : 480px) {
+  /* change index page layout for smartphones */
+  #content .index .year { margin-left: 0; text-align: center; }
+  #content .index-entry { margin-bottom: 0.5em; }
+  #content .index-entry time { float: none; text-align: left; width: 100%; }
+  #content .index-entry a { margin-left: 0; float: none; width: 100%; }
+}
+
+@media screen and (max-width: 768px) {
   /* let's use much smaller padding for small displays */
   .header-wrapper, .footer-wrapper { padding: 0em 0.5em; }
   .content-wrapper { padding: 0em 1em; }
