@@ -11,7 +11,7 @@
 {% extends "base.html" %}
 
 {% if document.summary %}
-  {% set summary = document.summary.replace('\n', ' ') %}
+  {% set summary = document.summary.replace('\n', ' ').strip() %}
 {% endif %}
 
 {% block head -%}
