@@ -16,6 +16,7 @@ Here you can see the list of changes between each Holocron release.
 - Fixed security issue when content author may steal private data through
   content's meta header.
 - Fixed YAML header parser for documents with multiple ``---`` signs.
+- Default theme is more responsive for smartphones & tablets now.
 
 
 0.1.1 (2015-08-22)
